# planemo

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.rst  TODO.rst  dev-requirements.txt  mypy.ini  pinned-dev-requirements.txt  pinned-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tool_test_viewer.html  tox.ini  update_galaxy_utils.sh
.circleci/: config.yml
.claude/commands/: ready-release.md
.github/workflows/: ci.yaml  deploy.yaml  pr.yaml
cwl-runner/: README  cwl-runner  setup.py
docs/: .planemo.yml  Vagrantfile  _running_external.rst  _running_intro.rst  _running_slurm.rst  _writing_argparse.rst  _writing_clusters.rst  _writing_collections.rst  _writing_conclusion.rst  _writing_conda_fleeqtk.rst  _writing_conda_init.rst  _writing_conda_new.rst  _writing_conda_overview.rst  _writing_conda_recipe_complete.rst  _writing_conda_search.rst  _writing_containers_linter_explain.rst  _writing_containers_mulled_build.rst  _writing_containers_mulled_output.rst  _writing_containers_publishing.rst  _writing_cwl_intro.rst  _writing_dependencies_conda.rst  _writing_dependencies_conda_cwl.rst  _writing_dependencies_containers.rst  _writing_dependencies_containers_cwl.rst  _writing_dependencies_docker.rst  _writing_from_help_command.rst  _writing_how_do_i.rst  _writing_intro.rst  _writing_lint_intro.rst  _writing_macros.rst  _writing_multiple_outputs.rst  _writing_parameters.rst  _writing_publish_intro.rst  _writing_scripts.rst  _writing_suites.rst  _writing_test_and_serve.rst  _writing_test_and_serve_appliance.rst  _writing_test_reports.rst  _writing_testing.rst  _writing_tool_metadata.rst  (+82 more)
docs/commands/: autoupdate.rst  bioc_conda_recipe_init.rst  bioc_tool_init.rst  brew.rst  brew_env.rst  brew_init.rst  ci_find_repos.rst  ci_find_tools.rst  ci_setup.rst  cli_metadata.rst  clone.rst  conda_build.rst  conda_env.rst  conda_init.rst  conda_install.rst  conda_lint.rst  conda_search.rst  config_init.rst  container_register.rst  create_alias.rst  cwl_run.rst  cwl_script.rst  database_create.rst  database_delete.rst  database_list.rst  delete_alias.rst  dependency_script.rst  docker_build.rst  docker_shell.rst  dockstore_init.rst  docs.rst  format.rst  invocation_download.rst  invocation_export.rst  job_config_init.rst  lint.rst  list_alias.rst  list_invocations.rst  list_repos.rst  merge_test_reports.rst  (+45 more)
docs/notebooks/: basics.ipynb  cwl.ipynb
docs/posters/: planemo_workflow_sdk.odp
docs/presentations/: 2016_workflows.html  2016_workflows.md  style.css
docs/tests/: tests_all.sh  tests_building.sh  tests_building_cwl.sh  tests_conda.sh  tests_conda_cwl.sh  tests_docker.sh  tests_docker_cwl.sh  tests_tdd.sh
docs/writing/: bwa-mem_v1.xml  bwa-mem_v2.xml  bwa-mem_v3.xml  bwa-mem_v4.xml  bwa-mem_v5.xml  gc_content.pl  gc_content.py  gc_content.xml  gen.sh  job_conf_slurm.xml  seqtk_macros.xml  seqtk_seq_v1.cwl  seqtk_seq_v1.xml  seqtk_seq_v2.cwl  seqtk_seq_v2.xml  seqtk_seq_v3.cwl  seqtk_seq_v3.xml  seqtk_seq_v3_tests.yml  seqtk_seq_v4.xml  seqtk_seq_v5.xml  seqtk_seq_v6.xml  seqtk_seq_with_macros.xml  show_diffs.sh
galaxy/: __init__.py
galaxy/tools/: lint.py  loader.py  loader_directory.py
galaxy/util/: __init__.py  bunch.py  odict.py
planemo/: __init__.py  autoupdate.py  bioblend.py  bioc_tool_builder.py  bioconductor_skeleton.py  ci.py  cli.py  cli_metadata.py  conda.py  conda_lint.py  conda_recipes.py  config.py  context.py  deps.py  docker.py  exit_codes.py  galaxy_config.py  galaxy_run.py  galaxy_serve.py  galaxy_test.py  git.py  github_util.py  glob.py  io.py  lint.py  lint_util.py  mulled.py  network_util.py  options.py  output_models.py  output_schemas.py  rscript_parse.py  runnable.py  runnable_resolve.py  shed.py  shed_lint.py  templates.py  tool_builder.py  tool_lint.py  tools.py  (+3 more)
planemo/autopygen/: argument_parser_conversion.py  param_info.py
planemo/bioconda_scripts/: bioconductor_skeleton.py
planemo/commands/: cmd_autoupdate.py  cmd_bioc_conda_recipe_init.py  cmd_bioc_tool_init.py  cmd_bioconductor_conda_recipe_init.py  cmd_brew.py  cmd_brew_env.py  cmd_brew_init.py  cmd_check_urls.py  cmd_ci_find_repos.py  cmd_clone.py  (+86 more)
planemo_ext/: TFdemo_wf_planemo.ga  TFdemo_wf_planemo_jan23.ga  install_tf_demos.py  welcome.html
scripts/: bioconductor_skeleton.py  bootstrap_history.py  build_slideshow.py  categories.py  commands_to_rst.py  commit_version.py  lint_sphinx_output.py  new_version.py  print_version_for_release.py  run_doc_test.sh  run_galaxy_workflow_tests.sh  slideshow_template.html  test_conformance_cwl.bash  test_confromance_cwl.bash  test_wheel.bash  test_workflow_tests.sh  tool_index.json  tool_index_to_id_map.py  travis_test.sh  update_bioconda.bash  update_extern.sh  update_planemo_recipe.bash  update_report_assets.sh
tests/: Dockerfile.jenkins  fake_trs.py  network_util.py  repository_dependencies.xml  repository_dependencies_shed.xml  shed_app.py  shed_app_test_utils.py  test_add_argument_actions_autopygen.py  test_autopygen_parser_discovery.py  test_autoupdate.py  test_build_and_lint.py  test_cli_metadata.py  test_cmd_autoupdate.py  test_cmd_dockstore_init.py  test_cmd_download_invocation_export.py  test_cmd_download_run_output.py  test_cmd_format.py  test_cmd_invocation_export.py  test_cmd_job_config_init.py  test_cmd_merge_reports.py  test_cmd_profile_job_config_init.py  test_cmd_serve.py  test_cmd_shed_serve.py  test_cmd_shed_test.py  test_cmd_test.py  test_cmd_test_conda.py  test_cmd_test_reports.py  test_cmd_training_fill_data_library.py  test_cmd_training_generate_from_wf.py  test_cmd_training_generate_tuto_from_wf.py  test_cmd_training_init.py  test_cmd_workflow_convert.py  test_cmd_workflow_job_init.py  test_cmd_workflow_lint.py  test_cmd_workflow_test_init.py  test_cmds_with_workflow_id.py  test_collection_elements_to_test_def.py  test_command_io.py  test_conda_lint.py  test_config_init.py  (+58 more)
tool_factory_2/: rgToolFactory2.xml
(+431 files in other folders)
